--- a/frontend/assets/css/app.scss
+++ b/frontend/assets/css/app.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
+@import '../styles/main';
 
 html, body {
   background-color: #F7F8FA;
