#1:  Add some styles for Bacon page

--- a/frontend/assets/css/app.scss
+++ b/frontend/assets/css/app.scss
@@ -32,7 +32,7 @@ a {
 main {
   max-width: 620px;
   margin: auto;
-  height: 100vh;
+  min-height: 100vh;
   padding: 0 30px;
   align-items: center;
   display: flex;
