--- a/frontend/assets/css/app.scss
+++ b/frontend/assets/css/app.scss
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
 @import '../styles/main';
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
 
 html, body {
   background-color: #F7F8FA;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Roboto', sans-serif;
   height: 100vh;
   color: #46444c;
   position: relative;
