2: Add media query mixin

--- a/frontend/assets/css/app.scss
+++ b/frontend/assets/css/app.scss
@@ -1,4 +1,6 @@
+@import 'include-media/dist/_include-media';
 @import '../styles/main';
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
 
 html, body {
