2: Add Form to Checkout page

--- a/frontend/assets/css/app.scss
+++ b/frontend/assets/css/app.scss
@@ -7,7 +7,7 @@ html, body {
   background-color: #F7F8FA;
   font-family: 'Roboto', sans-serif;
   height: 100vh;
-  color: #46444c;
+  color: $black;
   position: relative;
 }
 
@@ -24,6 +24,10 @@ body:before {
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  &:before, &:after {
+    box-sizing: border-box;
+  }
 }
 
 a {
@@ -32,7 +36,6 @@ a {
 }
 
 main {
-  max-width: 620px;
   margin: auto;
   min-height: 100vh;
   padding: 0 30px;
