--- a/frontend/assets/styles/main.scss
+++ b/frontend/assets/styles/main.scss
@@ -1,5 +1,7 @@
 // Abstracts
 @import 'abstracts/_variables';
+@import 'abstracts/_mixins';
 
 // Pages
 @import 'pages/_bacon';
+@import 'pages/_checkout';
