--- a/frontend/views/bacon.edge
+++ b/frontend/views/bacon.edge
@@ -6,3 +6,15 @@
     img: '/images/bacon.jpg'
   })
 @end
+
+<script>
+  function cloneBacon() {
+    let elem = document.querySelector('section img');
+    let clone = elem.cloneNode(true);
+    clone.classList.add('new-image');
+    elem.after(clone);
+  }
+  document.querySelector("section button").addEventListener("click", function () {
+    cloneBacon();
+  })
+</script>
