--- a/frontend/views/components/form.edge
+++ b/frontend/views/components/form.edge
@@ -1,40 +1,41 @@
-<form class="checkout-form" action="#">
+
+<form class="checkout-form" action="/order" method="POST" id="checkoutForm">
     <ul class="checkout-form__list">
         <li class="checkout-form__list-item">
             <h2 class="form-title">Personal information</h2>
             <div class="input-group">
                 <label class="label">
                     <span class="label-text">First name</span>
-                    <input class="input" type="text" placeholder="Elon" required>
+                    <input class="input" name="firstName" id="firstName" type="text" placeholder="Elon">
                 </label>
                 <label class="label">
                     <span class="label-text">Last name</span>
-                    <input class="input" type="text" placeholder="Mask">
+                    <input class="input" name="lastName" id="lastName" type="text" placeholder="Mask">
                 </label>
             </div>
             <div class="input-group">
                 <label class="label">
                     <span class="label-text">Email</span>
-                    <input class="input" type="email" placeholder="elon@spacex.com">
+                    <input class="input" name="email" type="email" id="email" placeholder="elon@spacex.com">
                 </label>
             </div>
             <div class="input-group">
                 <label class="label">
-                    <span class="label-text">Contry</span>
-                    <select class="select" name="contry" id="contry">
+                    <span class="label-text">Country</span>
+                    <select class="select" name="country" id="country">
                         <option value="United States">United States</option>
                         <option value="Canada">Canada</option>
                     </select>
                 </label>
                 <label class="label">
                     <span class="label-text">Postal Code</span>
-                    <input class="input" type="text" placeholder="10001">
+                    <input class="input" name="postalCode" id="postalCode" type="text" placeholder="10001">
                 </label>
             </div>
             <div class="input-group">
                 <label class="label">
                     <span class="label-text">Phone Number</span>
-                    <input class="input" type="phone" placeholder="(212)692-93-92">
+                    <input class="input" name="phone" type="phone" id="phone" placeholder="(212)692-93-92">
                 </label>
             </div>
         </li>
@@ -42,13 +43,13 @@
             <h2 class="form-title">
                 Payments details
                 <svg width="9" height="12" viewBox="0 0 9 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M4.50005 0C2.79096 0 1.40627 1.47701 1.40627 3.30004V4.00005H0.562456C0.250817 4.00005 0 4.2677 0 4.60001V11.4C0 11.7325 0.250923 12 0.562456 12H8.43754C8.74918 12 9 11.7323 9 11.4V4.60001C9 4.26759 8.74908 4.00005 8.43754 4.00005H7.59373V3.30004C7.59373 1.47701 6.20914 0 4.50005 0ZM4.50005 0.599955C5.90719 0.599955 7.03133 1.79895 7.03133 3.29999V4H1.96877V3.29999C1.96877 1.79903 3.09283 0.599955 4.50005 0.599955ZM4.50005 7.20004C4.9661 7.20004 5.34386 7.60299 5.34386 8.10011C5.34386 8.3665 5.23508 8.60559 5.06263 8.77038V9.60013C5.06263 9.93254 4.81158 10 4.50005 10C4.18841 10 3.93772 9.93243 3.93772 9.60013V8.77038C3.76527 8.60558 3.65649 8.3665 3.65649 8.10011C3.65649 7.60299 4.034 7.20004 4.50005 7.20004Z" fill="black"/>
+                    <path d="M4.50005 0C2.79096 0 1.40627 1.47701 1.40627 3.30004V4.00005H0.562456C0.250817 4.00005 0 4.2677 0 4.60001V11.4C0 11.7325 0.250923 12 0.562456 12H8.43754C8.74918 12 9 11.7323 9 11.4V4.60001C9 4.26759 8.74908 4.00005 8.43754 4.00005H7.59373V3.30004C7.59373 1.47701 6.20914 0 4.50005 0ZM4.50005 0.599955C5.90719 0.599955 7.03133 1.79895 7.03133 3.29999V4H1.96877V3.29999C1.96877 1.79903 3.09283 0.599955 4.50005 0.599955ZM4.50005 7.20004C4.9661 7.20004 5.34386 7.60299 5.34386 8.10011C5.34386 8.3665 5.23508 8.60559 5.06263 8.77038V9.60013C5.06263 9.93254 4.81158 10 4.50005 10C4.18841 10 3.93772 9.93243 3.93772 9.60013V8.77038C3.76527 8.60558 3.65649 8.3665 3.65649 8.10011C3.65649 7.60299 4.034 7.20004 4.50005 7.20004Z" fill="black" />
                 </svg>
             </h2>
             <div class="input-group">
                 <label class="label">
                     <span class="label-text">Credit Card Nubmer</span>
-                    <input class="input" type="text" placeholder="0000 - 0000 - 0000 - 0000">
+                    <input class="input" name="creditCard" id="creditCard" type="text" placeholder="0000 - 0000 - 0000 - 0000">
                     <span class="label-icon">
                         <svg width="39" height="23" viewBox="0 0 39 23" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M17.5666 16.2501H15.2174L16.6868 7.16469H19.0359L17.5666 16.2501Z" fill="#151A6E" />
@@ -64,14 +65,14 @@
             <div class="input-group">
                 <label class="label">
                     <span class="label-text">Security code</span>
-                    <input class="input" type="text" placeholder="***">
+                    <input class="input" name="CVV" id="cvv" type="text" placeholder="***">
                     <span class="label-icon">
                         <span class="hint-icon">?</span>
                     </span>
                 </label>
                 <label class="label">
                     <span class="label-text">Expiration Date</span>
-                    <input class="input" type="text" placeholder="MM / YY">
+                    <input class="input" name="expDate" id="expDate" type="text" placeholder="MM / YY">
                 </label>
             </div>
             <button class="form-submite" type="submite">
@@ -83,3 +84,93 @@
         </li>
     </ul>
 </form>
+
+<script src="https://cdn.jsdelivr.net/npm/just-validate@3.7.0/dist/just-validate.production.min.js"></script>
+<script>
+// Validation
+const validation = new JustValidate('#checkoutForm', {
+  errorFieldCssClass: 'is-invalid',
+});
+
+validation
+  .addField('#firstName', [
+    {
+      rule: 'required',
+      errorMessage: 'Field is required',
+    },
+  ])
+  .addField('#lastName', [
+    {
+      rule: 'required',
+      errorMessage: 'Field is required',
+    },
+  ])
+  .addField('#email', [
+    {
+      rule: 'required',
+      errorMessage: 'Field is required',
+    },
+    {
+      rule: 'email',
+      errorMessage: 'Email is invalid!',
+    },
+  ])
+  .addField('#postalCode', [
+    {
+      rule: 'required',
+      errorMessage: 'Field is required',
+    },
+    {
+      rule: 'customRegexp',
+      value: '^[0-9]{5}$',
+      errorMessage: 'Code is invalid!',
+    }
+  ])
+  .addField('#phone', [
+    {
+      rule: 'required',
+      errorMessage: 'Field is required',
+    },
+    {
+      rule: 'customRegexp',
+      value: '^[0-9]{10}$',
+      errorMessage: 'Phone is invalid!',
+    }
+  ])
+  .addField('#creditCard', [
+    {
+      rule: 'required',
+      errorMessage: 'Field is required',
+    },
+    {
+      rule: 'customRegexp',
+      value: '^[0-9]{16}$',
+      errorMessage: 'Card is invalid!',
+    }
+  ])
+  .addField('#cvv', [
+    {
+      rule: 'required',
+      errorMessage: 'Field is required',
+    },
+    {
+      rule: 'customRegexp',
+      value: '^[0-9]{3}$',
+      errorMessage: 'CVV is invalid!',
+    }
+  ])
+  .addField('#expDate', [
+    {
+      rule: 'required',
+      errorMessage: 'Field is required',
+    },
+    {
+      rule: 'customRegexp',
+      value: '^[0-9]{2}\/[0-9]{2}$',
+      errorMessage: 'Date is invalid!',
+    }
+  ])
+  .onSuccess((event) => {
+    alert('Validation passes and form submitted', event);
+  });
+</script>
