--- a/frontend/views/components/form.edge
+++ b/frontend/views/components/form.edge
@@ -84,9 +84,51 @@
         </li>
     </ul>
 </form>
+<div id="modal">
+    <div id="modal-content"></div>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/just-validate@3.7.0/dist/just-validate.production.min.js"></script>
 <script>
+// Send Form
+function sendForm() {
+    let form = document.getElementById('checkoutForm'),
+        xhr = new XMLHttpRequest(),
+        formData = new FormData(form);
+
+    xhr.open('POST','/order')
+    xhr.setRequestHeader("Content-Type", "application/json");
+    xhr.send(JSON.stringify(Object.fromEntries(formData)));
+
+    xhr.onreadystatechange = function() {
+        if (xhr.readyState == XMLHttpRequest.DONE) {
+            let obj = JSON.parse(xhr.responseText);
+            let text = "";
+
+            if (xhr.status === 200) {
+                text += obj.message
+            } else {
+                for (const x in obj) {
+                    text += '<p>' + x + " is invalid! </p>";
+                }
+            }
+
+            document.getElementById("modal-content").innerHTML = text;
+            document.getElementById("modal").style.display = 'flex';
+
+        }
+    }
+    return false;
+};
+
+let modal = document.getElementById("modal-content");
+document.addEventListener('click', function(event) {
+    var isClickInside = modal.contains(event.target);
+    if (!isClickInside) {
+        document.getElementById("modal").style.display = 'none'
+    }
+});
+
 // Validation
 const validation = new JustValidate('#checkoutForm', {
   errorFieldCssClass: 'is-invalid',
@@ -171,6 +213,6 @@ validation
     }
   ])
   .onSuccess((event) => {
-    alert('Validation passes and form submitted', event);
+    sendForm();
   });
 </script>
